apps/base/headplane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headplane
  labels:
    toolkit.fluxcd.io/tenant: dev-team
